add AMD modules

--- a/Task3/amd/index.html
+++ b/Task3/amd/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<h2>Модули через глобальный объект</h2>
+<h2>Модули AMD</h2>
 <h5 id="result"></h5>
 </body>
-<script src="js/index.js"></script>
+<script data-main="js/index.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
 </html>
